fix iframe on smaller devices

--- a/src/app.css
+++ b/src/app.css
@@ -80,6 +80,12 @@ p.subtitle:hover{
   justify-content: center;
 }
 
+@media (max-width: 768px) {
+  iframe {
+    width: 100%
+  }
+}
+
 .card {
   border-radius: 10px;
   position: relative;
